Include built plugin files in dist/ for immediate Figma plugin usage
- Users can install plugin directly without building
- dist/code.js and dist/ui.html are required by manifest.json

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ yarn-debug.log*
 yarn-error.log*
 
 # Build outputs
-dist/
 build/
+# Note: dist/ is included for Figma plugin distribution
 
 # Environment variables
 .env
