Add dual build system: personal vs open source
- Add webpack DefinePlugin for build-time configuration
- Create personal and opensource build scripts
- Conditionally include Info screen based on BUILD_TYPE
- Add TypeScript declarations for environment variables
- Update documentation for build variants
- Maintain single codebase with conditional features

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     },
     "typeRoots": [
       "./node_modules/@types",
-      "./node_modules/@figma/plugin-typings"
+      "./node_modules/@figma/plugin-typings",
+      "./types"
     ]
   },
   "include": [
